--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 # JPA
 spring.jpa.hibernate.ddl-auto=create
+
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=mydatabase
