--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,30 +18,24 @@ services:
       - ./idea:/idea
     command: mvn clean spring-boot:run
     depends_on:
-      - database4 # This service depends on mysql. Start that first.
-    environment: # Pass environment variables to the service
-      SPRING_DATASOURCE_URL: jdbc:mysql://database4:9090/database4?useSSL=false\&serverTimezone=UTC\&useLegacyDatetimeCode=false
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
+      - mongodb # This service depends on mysql. Start that first.
     networks: # Networks to join (Services on the same network can communicate with each other using their name)
-      - backend
+          - backend
 
-  # Database Service (Mysql)
-  database4:
-    image: mysql:5
-    container_name: database4
-    ports:
-      - "9090:9090"
+
+  mongodb:
+    container_name: reported-mongodb
+    image: mongo:3.6
     restart: always
     environment:
-      MYSQL_DATABASE: database4
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-      MYSQL_ROOT_PASSWORD: root
-    volumes:
-      - reporter-data:/var/lib/mysql
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+    ports:
+      - "27017:27017"
+    command: mongod --smallfiles --logpath=/dev/null # --quiet
     networks:
       - backend
+
 
 # Volumes
 volumes:
