Added Error option

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.hibernate.ddl-auto=create
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=mydatabase
+
+server.error.whitelabel.enabled=false
