--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,12 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create
 
 #spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=mydatabase
+spring.data.mongodb.host=app_db
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=test
+#Database connection strings
+#spring.data.mongodb.username=test #user name for db
+#spring.data.mongodb.password=test # your secret password
 
 server.error.whitelabel.enabled=false
 
