docker conf ready

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create
 
 #spring.data.mongodb.host=localhost
-#spring.data.mongodb.host=app_db
+spring.data.mongodb.host=app_db
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=test
 #Database connection strings
